--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start:ts": "node --no-warnings --loader ts-node/esm",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
     "test:browser": "playwright test",
     "server": "serve",
@@ -17,7 +18,9 @@
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
-    "serve": "^14.2.3"
+    "serve": "^14.2.3",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2"
   },
   "type": "module",
   "dependencies": {
