--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "devDependencies": {
     "@playwright/test": "^1.44.1",
+    "@types/jest": "^29.5.14",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
