--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "prettier": "^3.0.3",
     "serve": "^14.2.3",
     "ts-jest": "^29.3.4",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "webpack": "^5.101.0",
+    "webpack-cli": "^6.0.1"
   },
   "type": "module",
   "dependencies": {
