--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^29.5.14",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "serve": "^14.2.3",
