--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "devDependencies": {
     "@playwright/test": "^1.44.1",
+    "@tailwindcss/cli": "^4.1.17",
     "@types/jest": "^29.5.14",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
@@ -21,6 +22,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "serve": "^14.2.3",
+    "tailwindcss": "^4.1.17",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
     "webpack": "^5.101.0",
