--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "serve": "^14.2.3",
+    "supertest": "^7.2.2",
     "tailwindcss": "^4.1.17",
     "ts-jest": "^29.3.4",
     "ts-node": "^10.9.2",
@@ -31,6 +32,11 @@
   "type": "module",
   "dependencies": {
     "acorn": "^8.14.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "iconv": "^3.0.1",
+    "iconv-lite": "^0.7.2",
+    "sharp": "^0.34.5",
     "ws": "^8.18.3"
   }
 }
