--- a/exercises/ch17/package.json
+++ b/exercises/ch17/package.json
@@ -9,11 +9,16 @@
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint . --ext .js,.ts --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "flow": "flow",
+    "flow:build": "babel"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.6",
     "@babel/core": "^7.29.0",
+    "@babel/node": "^7.29.0",
     "@babel/preset-env": "^7.29.0",
+    "@babel/preset-flow": "^7.27.1",
     "@eslint/js": "^9.39.2",
     "@pollyjs/adapter-node-http": "^6.0.6",
     "@pollyjs/core": "^6.0.6",
@@ -23,8 +28,10 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-unicorn": "^62.0.0",
+    "flow-bin": "^0.301.0",
     "jest": "^30.2.0",
     "prettier": "^3.8.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.54.0",
     "webpack": "^5.105.1",
