--- a/exercises/ch17/.flowconfig
+++ b/exercises/ch17/.flowconfig
@@ -1,4 +1,5 @@
 [ignore]
+.*/ex02/mock/.*
 
 [include]
 
@@ -14,6 +15,5 @@ libdef-override=error
 deprecated-type-bool=error
 
 [options]
-esproposal.top_level_await=enable
 
 [strict]
